# resolv_wrapper

./: CMakeLists.txt  CPackConfig.cmake  CTestConfig.cmake  ChangeLog  ConfigureChecks.cmake  LICENSE  config.h.cmake
doc/: resolv_wrapper.1  resolv_wrapper.1.txt
src/: CMakeLists.txt  resolv_wrapper.c
tests/: fake_hosts.in  test_dns_fake.c  test_real_res_query.c
